--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,11 @@
             "src": "/login",
             "dest": "/"
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
     ]
 }
