update vercel test

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
         {
             "src": "/login",
             "dest": "/"
+        },
+        {
+            "src": "/**",
+            "dest": "/index.html"
         }
     ]
 }
