update vercel test

--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,12 @@
         {
             "src": "/login",
             "dest": "/"
-        },
+        }
+    ],
+    "rewrites": [
         {
-            "src": "/*",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
