update vercel test

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "src": "/",
             "dest": "/index.html"
+        },
+        {
+            "src": "/login",
+            "dest": "/"
         }
     ]
 }
