--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_REACT_APP_API_URL=http://localhost:8081
-VITE_REACT_APP_API_URL=https://your-chord-be-ngochuyyys-projects.vercel.app/
+VITE_REACT_APP_API_URL=https://your-chord-be-ngochuyyys-projects.vercel.app
