--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "src": "/login",
-            "dest": "/index.html"
+            "dest": "/"
         }
     ]
 }
