--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
